# router/app.go
@@ -14,22 +14,26 @@ func Router() *gin.Engine {
 	r.Use(middleware.CORS())
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.GET("/index", service.GetIndex)
-	r.GET("/user/list", service.GetUserList)
-	r.POST("/user/add", service.CreateUser)
-	r.DELETE("/user/delete", service.DeleteUser)
-	r.PUT("/user/update", service.UpdateUser)
-	r.GET("/user/getUserByToken", service.GetUserByToken)
 	r.GET("/user/loginByName", service.LoginByName)
-	r.GET("user/getUser", service.GetUser)
+	r.GET("/user/getUser", service.GetUser)
+	r.POST("/user/add", service.CreateUser)
+	Auth := r.Group("/")
+	Auth.Use(middleware.Auth())
+	{
+		Auth.GET("/user/list", service.GetUserList)
+		Auth.DELETE("/user/delete", service.DeleteUser)
+		Auth.PUT("/user/update", service.UpdateUser)
+		Auth.GET("/user/getUserByToken", service.GetUserByToken)
 
-	r.GET("/user/sendMsg", service.SendMsg)
-	r.GET("/user/sendUserMsg", service.SendUserMsg)
+		Auth.GET("/user/sendUserMsg", service.SendUserMsg)
+		Auth.GET("/user/history", service.GetHistory)
 
-	r.GET("/user/getFriendList", service.GetFriendListById)
-	r.POST("/user/pushFriendRequest", service.PushFriendRequest)
-	r.PUT("/user/dealWithFriendRequest", service.DealWithFriendRequest)
-	r.GET("/user/getRequestWithOption", service.GetRequestWithOption)
-	r.DELETE("/user/deleteFriend", service.DeleteFriend)
+		Auth.GET("/user/getFriendList", service.GetFriendListById)
+		Auth.POST("/user/pushFriendRequest", service.PushFriendRequest)
+		Auth.PUT("/user/dealWithFriendRequest", service.DealWithFriendRequest)
+		Auth.GET("/user/getRequestWithOption", service.GetRequestWithOption)
+		Auth.DELETE("/user/deleteFriend", service.DeleteFriend)
+	}
 	gin.SetMode(gin.DebugMode)
 	return r
 }
